--- a/html/news.html
+++ b/html/news.html
@@ -19,7 +19,7 @@
 
     <div>
         <!-- 最新消息 -->
-        <div class="my-5">
+        <div class="mb-5">
             <div class="container text-center">
                 <h1 class="indexh1 mt-5">WHAT'S NEW.</h1>
                 <h2 class="indexh2 mb-5">最新消息</h2>
@@ -123,7 +123,7 @@
         </div>
 
         <!-- 服務項目 -->
-        <div class="container my-5">
+        <div class="container mb-5">
             <div class="mt-5">
                 <h1 class="indexh1 mt-5 text-center">WHAT'S WE DO.</h1>
                 <h2 class="indexh2 mt-5 text-center">服務項目</h2>
@@ -182,14 +182,13 @@
         </div>
 
         <!-- 客戶個案 -->
-        <div class="container my-5">
-            <div>
-                <h2 class="indexh2 mt-5 text-center">客戶個案</h2>
-                <p class="indexp mt-3 px-30 txtIn">凱茂業界深耕多年，具備專業且豐富建置經驗，
-                    熟悉原廠及代理通路最新，且能確切執行並解決客戶需求之能力。提供客戶完整解決方案，無論是何種產業別，均能量身規劃，滿足各種跨整合需求。</p>
+        <div class="container mb-5">
+            <div class="mt-5">
+                <h2 class="indexh2 text-center">客戶個案</h2>
+                <p class="indexp px-30 txtIn">凱茂業界深耕多年，具備專業且豐富建置經驗，熟悉原廠及代理通路最新，且能確切執行並解決客戶需求之能力。提供客戶完整解決方案，無論是何種產業別，均能量身規劃，滿足各種跨整合需求。</p>
             </div>
 
-            <div class="row my-5 vh-50">
+            <div class="row vh-50 mt-5">
                 <div class="col-xl-6 card align-items-center">
                     <div class="h-100">
                         <img class="card-img w-100 h-auto" src="../資訊圖庫/合作夥伴logo/ausu.jpg" alt="1">
@@ -207,7 +206,7 @@
                 </div>
                 <div class="col-xl-6 card align-items-center">
                     <div class="h-100">
-                        <img class="card-img w-100 h-auto txtIn" src="../資訊圖庫/合作夥伴logo/DELL.png" alt="補圖">
+                        <img class="card-img w-100 h-auto txtIn" src="" alt="換圖">
                     </div>
 
                     <div class="card-img-overlay mx-3">
@@ -221,9 +220,10 @@
                 </div>
             </div>
         </div>
+        
 
         <!-- 產品資訊 -->
-        <div class="container my-5">
+        <div class="container mb-5">
             <!-- 產品影片 -->
             <div class="row mt-5">
                 <div class="col-xl-6">
