--- a/html/contact.html
+++ b/html/contact.html
@@ -37,35 +37,37 @@
         <div class="row mt-5">
             <div id="contactForm" class="col-xl rounded border p-3 shadow m-3 ">
                 <p class="indexh3"> 諮詢與服務表單：</p>
-                <form method="post" action="http://localhost:3000/php/form.php">  <!-- 使用VScode PHP server -->
+                <form method="post" action="http://localhost:3000/php/form.php">
+                    <!-- 使用VScode PHP server -->
                     <div class="form-group">
-                        <label for="FormName" class="pl-2 titleFont">姓名 <span>*</span></label>
-                        <input type="text" name="Name" id="FormName" class="form-control" placeholder="Name">
+                        <label for="FormName" class="pl-2 titleFont">姓名 <span>*</span><span id="NameIfo"></span></label>
+                        <input type="text" name="Name" id="FormName" class="form-control" placeholder="Name" required autocomplete="off"> 
 
                     </div>
                     <div class="form-group">
                         <label for="FormCompany" class="pl-2 titleFont">公司 <span>*</span></label>
-                        <input type="text" name="Company" id="FormCompany" class="form-control" placeholder="Company">
+                        <input type="text" name="Company" id="FormCompany" class="form-control" placeholder="Company" required autocomplete="off">
 
                     </div>
                     <div class="form-group">
                         <label for="FormTel" class="pl-2 titleFont">聯絡電話 <span>*</span></label>
-                        <input type="text" name="Tel" id="FormTel" class="form-control" placeholder="Phone Number">
+                        <input type="text" name="Tel" id="FormTel" class="form-control" placeholder="Phone Number" required autocomplete="off">
 
                     </div>
                     <div class="form-group">
                         <label for="FormEmail" class="pl-2 titleFont">電子郵件 <span>*</span> </label>
-                        <input type="email" name="Email" id="FormEmail" class="form-control" placeholder="E-mail">
+                        <input type="email" name="Email" id="FormEmail" class="form-control" placeholder="E-mail" required autocomplete="off">
 
                     </div>
                     <div class="form-group">
                         <label for="FormContent" class="pl-2 titleFont">諮詢內容 <span>*</span></label>
                         <textarea name="Content" id="FormContent" class="form-control" placeholder="Messages"
-                            rows="3"></textarea>
+                            rows="3" required autocomplete="off"></textarea>
 
                     </div>
-                    <div  class="form-group">
-                        <img class="border" id="check" src="http://localhost:3000/php/captcha.php"> <!-- 使用VScode PHP server -->
+                    <div class="form-group">
+                        <img class="border" id="check" src="http://localhost:3000/php/captcha.php">
+                        <!-- 使用VScode PHP server -->
                         <div id="refresh" class="ml-2">
                             <img id="refreshIcon" src="/資訊圖庫/icon/refresh-1.png" width="20px" height="20px">
                             <span class="CaptchaFont ml-2 ">更新驗證碼</span>
@@ -73,7 +75,7 @@
                     </div>
                     <div class="form-group">
                         <label class="pl-2 titleFont">驗證碼 <span>*</span></label>
-                        <input type="text" name="Captcha" class="form-control" placeholder="Captcha">
+                        <input type="text" name="Captcha" class="form-control" placeholder="Captcha" required autocomplete="off">
 
                     </div>
                     <input type="submit" class="btn btn-primary btn-block" value="SEND">
@@ -127,13 +129,28 @@
             // 驗證碼動起來
             var d = 1;
 
-            $('#refresh').on({  
+            $('#refresh').on({
                 'click': function () {
                     $('#check').attr("src", "http://localhost:3000/php/captcha.php"); // 使用VScode PHP server
                     $('#refreshIcon').css('transform', `rotateZ(${-d * 360}deg)`);
                     d++;
                 },
             })
+
+
+            // 表單提交前驗證欄位是否已填寫
+            // $('#NameIfo').html('請輸入姓名')
+            // console.log($('#FormName').val())
+            // function chk() {
+            //     if ($('#FormName').val() == '') {
+            //         alert('XX')
+            //         $('#NameIfo').html('請輸入姓名')
+            //         return false
+            //     } else {
+            //         return true;
+            //     }
+
+            // }
 
         })
 
