--- a/html/news.html
+++ b/html/news.html
@@ -16,6 +16,23 @@
 </head>
 
 <body>
+    <!-- hamberger -->
+    <input type="checkbox" id="active">
+    <label for="active" class="menu-btn"><span></span></label>
+    <label for="active" class="close"></label>
+    <div class="wrapper">
+        <div class="wapperContent">
+            <img src="../img/logo/only-logo.png" style="width:80px;position: absolute;position:0px 0px;">
+
+            <div class="wapperContentWord">
+                <a href="./index.html">HOME</a><br>
+                <a href="./aboutus.html">ABOUT</a><br>
+                <a href="./service.html">SERVICES</a><br>
+                <a href="./product.html">PRODUCTS</a><br>
+                <a href="./contact.html">CONTACT</a>
+            </div>
+        </div>
+    </div>
 
     <div>
         <!-- 最新消息 -->
@@ -125,7 +142,7 @@
         <!-- 服務項目 -->
         <div class="container mb-5">
             <div class="mt-5">
-                <h1 class="indexh1 mt-5 text-center">WHAT'S WE DO.</h1>
+                <h1 class="indexh1 mt-5 text-center">WHAT WE DO.</h1>
                 <h2 class="indexh2 mt-5 text-center">服務項目</h2>
                 <p class="indexp mt-3 px-30 txtIn">凱茂資訊，能依客戶實際需求規劃最適合的解決方案，如主機虛擬化、郵件伺服器、備份備援、雲端運算、端點管理、網通架構、資訊安全等規劃......
                 </p>
@@ -191,7 +208,7 @@
             <div class="row vh-50 mt-5">
                 <div class="col-xl-6 card align-items-center">
                     <div class="h-100">
-                        <img class="card-img w-100 h-auto" src="../資訊圖庫/合作夥伴logo/ausu.jpg" alt="1">
+                        <img class="card-img w-100 h-auto" src="../資訊圖庫/合作夥伴logo/ASUS.png" alt="1">
                     </div>
 
                     <div class="card-img-overlay mx-3">
@@ -206,7 +223,7 @@
                 </div>
                 <div class="col-xl-6 card align-items-center">
                     <div class="h-100">
-                        <img class="card-img w-100 h-auto txtIn" src="" alt="換圖">
+                        <img class="card-img w-100 h-auto txtIn" src="../資訊圖庫/合作夥伴logo/Dell_Logo.png" alt="換圖">
                     </div>
 
                     <div class="card-img-overlay mx-3">
@@ -246,8 +263,8 @@
                     <div class="bg-light">
                         <a href="#">
                             <div class="row">
-                                <div class="col-xl-6 align-self-center rec300">
-                                    <img class="w-100 h-auto" src="" alt="補圖" />
+                                <div class="col-xl-6 align-self-center rec300 ">
+                                    <img class="w-100 h-auto" src="../資訊圖庫/合作夥伴logo/LENOVO-1.jpg" alt="補圖" />
                                 </div>
                                 <div class="col-xl-6">
                                     <h2 class="indexh2">LENOVO </h2>
@@ -262,7 +279,7 @@
                         <a href="#">
                             <div class="row">
                                 <div class="col-xl-6 align-self-center rec300">
-                                    <img class="w-100 h-auto" src="" alt="補圖" />
+                                    <img class="w-100 h-auto" src="../資訊圖庫/合作夥伴logo/microsoft.png" alt="補圖" />
                                 </div>
                                 <div class="col-xl-6">
                                     <h2 class="indexh2">MICROSOFT</h2>
@@ -279,7 +296,7 @@
                         <a href="#">
                             <div class="row">
                                 <div class="col-xl-6 align-self-center rec300">
-                                    <img class="w-100 h-auto " src="" alt="補圖" />
+                                    <img class="w-100 h-auto " src="../資訊圖庫/合作夥伴logo/ASUS.png" alt="補圖" />
                                 </div>
                                 <div class="col-xl-6">
                                     <h2 class="indexh2">ASUS</h2>
@@ -314,7 +331,7 @@
                             <div class="row">
                                 <div class="col-xl-6  rec300">
                                     <img class="w-100 h-auto"
-                                        src="https://www.kx.com.tw/file/2017/11/08/400x400Checkpoint.png" alt="" />
+                                        src="../資訊圖庫/合作夥伴logo/checkpoint-logo-stacked-large.png" alt="" />
                                 </div>
                                 <div class="col-xl-6">
                                     <h2 class="indexh2">Check Point</h2>
@@ -332,7 +349,7 @@
                             <div class="row">
                                 <div class="col-xl-6 align-self-center rec300">
                                     <img class="w-100 h-auto"
-                                        src="https://www.kx.com.tw/file/2017/10/25/Hep_200x200_1.jpg" alt="" />
+                                        src="../資訊圖庫/合作夥伴logo/Hewlett_Packard_Enterprise_logo.svg.png" alt="" />
                                 </div>
                                 <div class="col-xl-6">
                                     <h2 class="indexh2">HPE</h2>
@@ -352,7 +369,7 @@
                             <div class="row">
                                 <div class="col-xl-6 align-self-center rec300">
                                     <img class="w-100 h-auto"
-                                        src="https://www.kx.com.tw/file/2017/10/30/Cisco_200x200.jpg" alt="" />
+                                        src="../資訊圖庫/合作夥伴logo/Cisco-logo.png" alt="" />
                                 </div>
                                 <div class="col-xl-6">
                                     <h2 class="indexh2">CISCO</h2>
@@ -369,7 +386,7 @@
                             <div class="row">
                                 <div class="col-xl-6 align-self-center rec300">
                                     <img class="w-100 h-auto"
-                                        src="https://www.kx.com.tw/file/2017/11/17/200x200_Aruba_Logo.png" alt="" />
+                                        src="../資訊圖庫/合作夥伴logo/aruba.svg" alt="" />
                                 </div>
                                 <div class="col-xl-6">
                                     <h2 class="indexh2">Aruba</h2>
@@ -387,7 +404,7 @@
                             <div class="row">
                                 <div class="col-xl-6 align-self-center rec300">
                                     <img class="w-100 h-auto"
-                                        src="https://www.kx.com.tw/file/2017/11/03/nutanix_200x200.jpg" alt="" />
+                                        src="../資訊圖庫/合作夥伴logo/NUTANIX.png" alt="" />
                                 </div>
                                 <div class="col-xl-6">
                                     <h2 class="indexh2">NUTANIX</h2>
@@ -403,7 +420,7 @@
                         <a href="#">
                             <div class="row">
                                 <div class="col-xl-6 align-self-center rec300">
-                                    <img class="w-100 h-auto" src="" alt="補圖" />
+                                    <img class="w-100 h-auto" src="../資訊圖庫/合作夥伴logo/Fortinet-Logo.png" alt="補圖" />
                                 </div>
                                 <div class="col-xl-6">
                                     <h2 class="indexh2">FORTIGATE</h2>
@@ -420,7 +437,7 @@
                         <a href="#">
                             <div class="row">
                                 <div class="col-xl-6 align-self-center rec300">
-                                    <img class="w-100 h-auto" src="" alt="補圖" />
+                                    <img class="w-100 h-auto" src="../資訊圖庫/合作夥伴logo/DVC.svg" alt="補圖" />
                                 </div>
                                 <div class="col-xl-6">
                                     <h2 class="indexh2">DVC</h2>
