--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -54,6 +54,143 @@
         </div>
     </div>
 
+    
+    <!-- 合作夥伴 -->
+    <div class="container vh-100 mt-5">
+        <div class="py-3">
+            <h2 class="text-center indexh2 mt-5">合作夥伴</h2>
+            <p class="indexp px-30 txtIn">
+                我們與各領域的科技廠商密切合作，提供符合您架構的解決方案，協助您為客戶創造更多價值。這些合作當中，包含了策略聯盟與技術聯盟兩種合作夥伴。確保在產品安裝與使用過程當中都能維持順暢的客戶體驗。</p>
+        </div>
+
+        <!-- 幻燈片 -->
+        <div id="carouselExampleControls1" class="carousel slide" data-ride="carousel" data-interval="1000000">
+            <!-- 輪播內容 -->
+            <div class="carousel-inner">
+
+                <div class="carousel-item active ">
+                    <div class="row pt-5">
+                        <div class="col-xl-2">
+                            <a href="#">
+                                <img src="../資訊圖庫/合作夥伴logo/checkpoint-logo-stacked-large.png" alt="Image" class="img-thumbnail">
+                            </a>
+                        </div>
+                        <div class="col-xl-2">
+                            <a href="#">
+                                <img src="../資訊圖庫/合作夥伴logo/ASUS.png" alt="Image" class="img-thumbnail">
+                            </a>
+                        </div>
+                        <div class="col-xl-2">
+                            <a href="#">
+                                <img src="../資訊圖庫/合作夥伴logo/aruba.svg" alt="Image" class="img-thumbnail">
+                            </a>
+                        </div>
+                        <div class="col-xl-2">
+                            <a href="#">
+                                <img src="../資訊圖庫/合作夥伴logo/Dell_Logo.png"
+                                    alt="Image" class=" img-thumbnail">
+                            </a>
+                        </div>
+                        <div class="col-xl-2">
+                            <a href="#">
+                                <img src="https://www.kx.com.tw/file/2017/10/25/Hep_200x200_1.jpg"
+                                    alt="Image" class="img-thumbnail">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="carousel-item ">
+                    <div class="row pt-5">
+                        <div class="col-xl-2">
+                            <a href="#">
+                                <img src="../資訊圖庫/合作夥伴logo/microsoft.png"
+                                    alt="Image" class="img-thumbnail">
+                            </a>
+                        </div>
+                        <div class="col-xl-2">
+                            <a href="#">
+                                <img src="https://www.kx.com.tw/file/2017/11/03/nutanix_200x200.jpg"
+                                    alt="Image" class="img-thumbnail">
+                            </a>
+                        </div>
+                        <div class="col-xl-2">
+                            <a href="#">
+                                <img src="https://www.kx.com.tw/file/2017/10/30/Cisco_200x200.jpg"
+                                    alt="Image" class="img-thumbnail">
+                            </a>
+                        </div>
+                        <div class="col-xl-2">
+                            <a href="#">
+                                <img src="../資訊圖庫/合作夥伴logo/LENOVO-1.jpg"
+                                    alt="Image" class="img-thumbnail">
+                            </a>
+                        </div>
+                        <div class="col-xl-2">
+                            <a href="#">
+                                <img src="../資訊圖庫/合作夥伴logo/DVC.svg"
+                                    alt="Image" class="img-thumbnail">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="carousel-item">
+                    <div class="row pt-5">
+                        <div class="col-xl-2">
+                            <a href="#">
+                                <img src="../資訊圖庫/合作夥伴logo/FORTIGATE.png"
+                                    alt="Image" class="img-thumbnail">
+                            </a>
+                        </div>
+                        <div class="col-xl-2">
+                            <a href="#">
+                                <img src="../資訊圖庫/合作夥伴logo/checkpoint-logo-01.jpg"
+                                    alt="Image" class="img-thumbnail">
+                            </a>
+                        </div>
+                        <div class="col-xl-2">
+                            <a href="#">
+                                <img src="../資訊圖庫/合作夥伴logo/checkpoint-logo-stacked-large.png"
+                                    alt="Image" class="img-thumbnail">
+                            </a>
+                        </div>
+                        <div class="col-xl-2">
+                            <a href="#">
+                                <img src="../資訊圖庫/合作夥伴logo/hewlett-packard-enterprise.png"
+                                    alt="Image" class="img-thumbnail">
+                            </a>
+                        </div>
+                        <div class="col-xl-2">
+                            <a href="#">
+                                <img src="../資訊圖庫/合作夥伴logo/MICROSOFT-1.png"
+                                    alt="Image" class="img-thumbnail">
+                            </a>
+                        </div>
+                    </div>
+
+
+                </div>
+            </div>
+            <!-- 左右箭頭 -->
+            <button class="carousel-control-prev" type="button" data-target="#carouselExampleControls1"
+                data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            </button>
+            <button class="carousel-control-next" type="button" data-target="#carouselExampleControls1"
+                data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            </button>
+            <!-- 指標控制 -->
+            <ol class="carousel-indicators mt-3">
+                <li data-target="#carouselExampleControls1" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleControls1" data-slide-to="1"></li>
+                <li data-target="#carouselExampleControls1" data-slide-to="2"></li>
+            </ol>
+
+        </div>
+    </div>
+
     <!-- 凱茂理念 -->
     <div class="container vh-100 mt-5">
         <div class="row mt-5">
@@ -160,142 +297,6 @@
 
     </div>
 
-    <!-- 合作夥伴 -->
-    <div class="container vh-100 mt-5">
-        <div class="py-3">
-            <h2 class="text-center indexh2 mt-5">合作夥伴</h2>
-            <p class="indexp px-30 txtIn">
-                我們與各領域的科技廠商密切合作，提供符合您架構的解決方案，協助您為客戶創造更多價值。這些合作當中，包含了策略聯盟與技術聯盟兩種合作夥伴。確保在產品安裝與使用過程當中都能維持順暢的客戶體驗。</p>
-        </div>
-
-        <!-- 幻燈片 -->
-        <div id="carouselExampleControls1" class="carousel slide" data-ride="carousel" data-interval="1000000">
-            <!-- PALO ALTO, FORTIGATE,  DVC,  MICROSOFT,  VMWARE,  中芯數據,  LENOVO -->
-            <!-- 輪播內容 -->
-            <div class="carousel-inner">
-
-                <div class="carousel-item active ">
-                    <div class="row pt-5">
-                        <div class="col-xl-2">
-                            <a href="#">
-                                <img src="../資訊圖庫/合作夥伴logo/DELL.png" alt="Image" class="img-thumbnail">
-                            </a>
-                        </div>
-                        <div class="col-xl-2">
-                            <a href="#">
-                                <img src="../資訊圖庫/合作夥伴logo/ausu.jpg" alt="Image" class="img-thumbnail">
-                            </a>
-                        </div>
-                        <div class="col-xl-2">
-                            <a href="#">
-                                <img src="https://www.kx.com.tw/file/2017/11/17/200x200_Aruba_Logo.png" alt="Image" class="img-thumbnail">
-                            </a>
-                        </div>
-                        <div class="col-xl-2">
-                            <a href="#">
-                                <img src="https://www.kx.com.tw/file/2017/11/08/400x400Checkpoint.png"
-                                    alt="Image" class=" img-thumbnail">
-                            </a>
-                        </div>
-                        <div class="col-xl-2">
-                            <a href="#">
-                                <img src="https://www.kx.com.tw/file/2017/10/25/Hep_200x200_1.jpg"
-                                    alt="Image" class="img-thumbnail">
-                            </a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="carousel-item ">
-                    <div class="row pt-5">
-                        <div class="col-xl-2">
-                            <a href="#">
-                                <img src="https://www.kx.com.tw/file/2017/11/17/200x200_Aruba_Logo.png"
-                                    alt="Image" class="img-thumbnail">
-                            </a>
-                        </div>
-                        <div class="col-xl-2">
-                            <a href="#">
-                                <img src="https://www.kx.com.tw/file/2017/11/03/nutanix_200x200.jpg"
-                                    alt="Image" class="img-thumbnail">
-                            </a>
-                        </div>
-                        <div class="col-xl-2">
-                            <a href="#">
-                                <img src="https://www.kx.com.tw/file/2017/10/30/Cisco_200x200.jpg"
-                                    alt="Image" class="img-thumbnail">
-                            </a>
-                        </div>
-                        <div class="col-xl-2">
-                            <a href="#">
-                                <img src="https://www.kx.com.tw/file/2017/11/17/200x200_Aruba_Logo.png"
-                                    alt="Image" class="img-thumbnail">
-                            </a>
-                        </div>
-                        <div class="col-xl-2">
-                            <a href="#">
-                                <img src="https://www.kx.com.tw/file/2017/11/17/200x200_Aruba_Logo.png"
-                                    alt="Image" class="img-thumbnail">
-                            </a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="carousel-item">
-                    <div class="row pt-5">
-                        <div class="col-xl-2">
-                            <a href="#">
-                                <img src="https://www.kx.com.tw/file/2017/10/30/Cisco_200x200.jpg"
-                                    alt="Image" class="img-thumbnail">
-                            </a>
-                        </div>
-                        <div class="col-xl-2">
-                            <a href="#">
-                                <img src="https://www.kx.com.tw/file/2017/10/30/Cisco_200x200.jpg"
-                                    alt="Image" class="img-thumbnail">
-                            </a>
-                        </div>
-                        <div class="col-xl-2">
-                            <a href="#">
-                                <img src="https://www.kx.com.tw/file/2017/10/30/Cisco_200x200.jpg"
-                                    alt="Image" class="img-thumbnail">
-                            </a>
-                        </div>
-                        <div class="col-xl-2">
-                            <a href="#">
-                                <img src="https://www.kx.com.tw/file/2017/10/30/Cisco_200x200.jpg"
-                                    alt="Image" class="img-thumbnail">
-                            </a>
-                        </div>
-                        <div class="col-xl-2">
-                            <a href="#">
-                                <img src="https://www.kx.com.tw/file/2017/10/30/Cisco_200x200.jpg"
-                                    alt="Image" class="img-thumbnail">
-                            </a>
-                        </div>
-                    </div>
-
-
-                </div>
-            </div>
-            <!-- 左右箭頭 -->
-            <button class="carousel-control-prev" type="button" data-target="#carouselExampleControls1"
-                data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            </button>
-            <button class="carousel-control-next" type="button" data-target="#carouselExampleControls1"
-                data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            </button>
-            <!-- 指標控制 -->
-            <ol class="carousel-indicators mt-3">
-                <li data-target="#carouselExampleControls1" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleControls1" data-slide-to="1"></li>
-                <li data-target="#carouselExampleControls1" data-slide-to="2"></li>
-            </ol>
-
-        </div>
-    </div>
 
     <!-- 里程碑 -->
     <div>
