--- a/html/news.html
+++ b/html/news.html
@@ -45,10 +45,12 @@
             <!-- 幻燈片 -->
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                 <!-- 左右箭頭 -->
-                <button class="carousel-control-prev" type="button" data-target="#carouselExampleIndicators" data-slide="prev">
+                <button class="carousel-control-prev" type="button" data-target="#carouselExampleIndicators"
+                    data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 </button>
-                <button class="carousel-control-next" type="button" data-target="#carouselExampleIndicators" data-slide="next">
+                <button class="carousel-control-next" type="button" data-target="#carouselExampleIndicators"
+                    data-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 </button>
                 <!-- 輪播內容 -->
@@ -127,12 +129,16 @@
                 </div>
                 <!-- 指標控制 -->
                 <div class="carousel-indicators mt-3">
-                    <button type="button" data-target="#carouselExampleIndicators" data-slide-to="0" class="active indicators"
-                        aria-label="Slide 1"></button>
-                    <button type="button" class="indicators" data-target="#carouselExampleIndicators" data-slide-to="1"></button>
-                    <button type="button" class="indicators" data-target="#carouselExampleIndicators" data-slide-to="2"></button>
-                    <button type="button" class="indicators" data-target="#carouselExampleIndicators" data-slide-to="3"></button>
-                    <button type="button" class="indicators" data-target="#carouselExampleIndicators" data-slide-to="4"></button>
+                    <button type="button" data-target="#carouselExampleIndicators" data-slide-to="0"
+                        class="active indicators" aria-label="Slide 1"></button>
+                    <button type="button" class="indicators" data-target="#carouselExampleIndicators"
+                        data-slide-to="1"></button>
+                    <button type="button" class="indicators" data-target="#carouselExampleIndicators"
+                        data-slide-to="2"></button>
+                    <button type="button" class="indicators" data-target="#carouselExampleIndicators"
+                        data-slide-to="3"></button>
+                    <button type="button" class="indicators" data-target="#carouselExampleIndicators"
+                        data-slide-to="4"></button>
                 </div>
 
             </div>
@@ -144,7 +150,8 @@
             <div class="mt-5">
                 <h1 class="indexh1 mt-5 text-center">WHAT WE DO.</h1>
                 <h2 class="indexh2 mt-5 text-center">服務項目</h2>
-                <p class="indexp mt-3 px-30 txtIn">凱茂資訊，能依客戶實際需求規劃最適合的解決方案，如主機虛擬化、郵件伺服器、備份備援、雲端運算、端點管理、網通架構、資訊安全等規劃......
+                <p class="indexp mt-3 px-30 txtIn">
+                    凱茂資訊，能依客戶實際需求規劃最適合的解決方案，如主機虛擬化、郵件伺服器、備份備援、雲端運算、端點管理、網通架構、資訊安全等規劃......
                 </p>
             </div>
 
@@ -153,7 +160,8 @@
                     <img class="card-img" src="../資訊圖庫/A22.jpg" alt="1">
                     <div class="card-img-overlay">
                         <h3 class="card-title indexh3">軟體銷售服務</h3>
-                        <p class="card-text indexp txtIn">微軟授權、防毒軟體、Adobe授權、繪圖軟體授權、虛擬化軟體、開發工具軟體、網站開發服務、備份備援、郵件伺服務器及其他等規劃與採購服務。
+                        <p class="card-text indexp txtIn">
+                            微軟授權、防毒軟體、Adobe授權、繪圖軟體授權、虛擬化軟體、開發工具軟體、網站開發服務、備份備援、郵件伺服務器及其他等規劃與採購服務。
                         </p>
                     </div>
                 </div>
@@ -202,12 +210,13 @@
         <div class="container mb-5">
             <div class="mt-5">
                 <h2 class="indexh2 text-center">客戶個案</h2>
-                <p class="indexp px-30 txtIn">凱茂業界深耕多年，具備專業且豐富建置經驗，熟悉原廠及代理通路最新，且能確切執行並解決客戶需求之能力。提供客戶完整解決方案，無論是何種產業別，均能量身規劃，滿足各種跨整合需求。</p>
+                <p class="indexp px-30 txtIn">
+                    凱茂業界深耕多年，具備專業且豐富建置經驗，熟悉原廠及代理通路最新，且能確切執行並解決客戶需求之能力。提供客戶完整解決方案，無論是何種產業別，均能量身規劃，滿足各種跨整合需求。</p>
             </div>
 
             <div class="row vh-50 mt-5">
-                <div class="col-xl-6 card align-items-center">
-                    <div class="h-100">
+                <div class="col-xl-6 card">
+                    <div class="center2">
                         <img class="card-img w-100 h-auto" src="../資訊圖庫/合作夥伴logo/ASUS.png" alt="1">
                     </div>
 
@@ -221,8 +230,8 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-xl-6 card align-items-center">
-                    <div class="h-100">
+                <div class="col-xl-6 card ">
+                    <div class="center2">
                         <img class="card-img w-100 h-auto txtIn" src="../資訊圖庫/合作夥伴logo/Dell_Logo.png" alt="換圖">
                     </div>
 
@@ -237,7 +246,7 @@
                 </div>
             </div>
         </div>
-        
+
 
         <!-- 產品資訊 -->
         <div class="container mb-5">
@@ -259,16 +268,19 @@
             </div>
             <!-- 合作廠商產品列表 -->
             <div class="row my-5">
+
                 <div class="col-xl-6 p-2">
                     <div class="bg-light">
                         <a href="#">
                             <div class="row">
-                                <div class="col-xl-6 align-self-center rec300 ">
-                                    <img class="w-100 h-auto" src="../資訊圖庫/合作夥伴logo/LENOVO-1.jpg" alt="補圖" />
+                                <div class="col-xl-6 rec300">
+                                    <div class="center">
+                                        <img class="w-100 h-auto" src="../資訊圖庫/合作夥伴logo/LENOVO-1.jpg" alt="補圖" />
+                                    </div>
                                 </div>
-                                <div class="col-xl-6">
+                                <div class="col-xl-6 pl-4">
                                     <h2 class="indexh2">LENOVO </h2>
-                                    <p class="indexp">商用桌機<br />商用筆電<br />顯示器<br />伺服器<br />工作站<br />STORAGE</p>
+                                    <p class="indexp ">商用桌機<br />商用筆電<br />顯示器<br />伺服器<br />工作站<br />STORAGE</p>
                                 </div>
                             </div>
                         </a>
@@ -278,10 +290,13 @@
                     <div class="bg-light">
                         <a href="#">
                             <div class="row">
-                                <div class="col-xl-6 align-self-center rec300">
-                                    <img class="w-100 h-auto" src="../資訊圖庫/合作夥伴logo/microsoft.png" alt="補圖" />
+                                <div class="col-xl-6 rec300">
+                                    <div class="center">
+                                        <img class="w-100 h-auto" src="../資訊圖庫/合作夥伴logo/MICROSOFT-1.png" alt="補圖" />
+                                    </div>
+
                                 </div>
-                                <div class="col-xl-6">
+                                <div class="col-xl-6 pl-4">
                                     <h2 class="indexh2">MICROSOFT</h2>
                                     <p class="indexp">作業系統<br />授權軟體<br />辦公軟體</p>
                                 </div>
@@ -295,10 +310,13 @@
                     <div class="bg-light">
                         <a href="#">
                             <div class="row">
-                                <div class="col-xl-6 align-self-center rec300">
-                                    <img class="w-100 h-auto " src="../資訊圖庫/合作夥伴logo/ASUS.png" alt="補圖" />
+                                <div class="col-xl-6 rec300">
+                                    <div class="center">
+                                        <img class="w-100 h-auto " src="../資訊圖庫/合作夥伴logo/ASUS.png" alt="補圖" />
+                                    </div>
+
                                 </div>
-                                <div class="col-xl-6">
+                                <div class="col-xl-6 pl-4">
                                     <h2 class="indexh2">ASUS</h2>
                                     <p class="indexp">
                                         商用桌機、商用筆電<br />顯示器<br />主機板/零組件<br />網通產品<br />伺服器<br />工作站<br />ACC
@@ -313,12 +331,15 @@
                     <div class="bg-light">
                         <a href="#">
                             <div class="row">
-                                <div class="col-xl-6 align-self-center rec300">
-                                    <img class="w-100 h-auto" src="../資訊圖庫/合作夥伴logo/Dell2.svg.png" alt="" />
+                                <div class="col-xl-6 rec300">
+                                    <div class="center">
+                                        <img class="w-100 h-auto" src="../資訊圖庫/合作夥伴logo/Dell_Logo.png" alt="" />
+                                    </div>
                                 </div>
-                                <div class="col-xl-6">
+                                <div class="col-xl-6 pl-4">
                                     <h2 class="indexh2">DELL</h2>
-                                    <p class="indexp">VxRail超融合<br />商用桌機<br />商用筆電<br />顯示器<br />伺服器<br />工作站<br />STORAGE</p>
+                                    <p class="indexp">
+                                        VxRail超融合<br />商用桌機<br />商用筆電<br />顯示器<br />伺服器<br />工作站<br />STORAGE</p>
                                 </div>
                             </div>
                         </a>
@@ -330,10 +351,12 @@
                         <a href="#">
                             <div class="row">
                                 <div class="col-xl-6  rec300">
-                                    <img class="w-100 h-auto"
-                                        src="../資訊圖庫/合作夥伴logo/checkpoint-logo-stacked-large.png" alt="" />
+                                    <div class="center">
+                                        <img class="w-100 h-auto"
+                                            src="../資訊圖庫/合作夥伴logo/checkpoint-logo-stacked-large.png" alt="" />
+                                    </div>
                                 </div>
-                                <div class="col-xl-6">
+                                <div class="col-xl-6 pl-4">
                                     <h2 class="indexh2">Check Point</h2>
                                     <p class="indexp">FIREWALL<br />Harmony保護使用者與存取權限</p>
 
@@ -347,11 +370,13 @@
                     <div class="bg-light">
                         <a href="#">
                             <div class="row">
-                                <div class="col-xl-6 align-self-center rec300">
-                                    <img class="w-100 h-auto"
-                                        src="../資訊圖庫/合作夥伴logo/Hewlett_Packard_Enterprise_logo.svg.png" alt="" />
+                                <div class="col-xl-6 rec300">
+                                    <div class="center">
+                                        <img class="w-100 h-auto"
+                                            src="../資訊圖庫/合作夥伴logo/Hewlett_Packard_Enterprise_logo.svg.png" alt="" />
+                                    </div>
                                 </div>
-                                <div class="col-xl-6">
+                                <div class="col-xl-6 pl-4">
                                     <h2 class="indexh2">HPE</h2>
                                     <p class="indexp">
                                         超融合(SIMPLIVITY)<br />伺服器<br />STORAGE<br />商用桌機<br />商用筆電<br />工作站<br />HPE網路設備
@@ -367,11 +392,12 @@
                     <div class="bg-light">
                         <a href="#">
                             <div class="row">
-                                <div class="col-xl-6 align-self-center rec300">
-                                    <img class="w-100 h-auto"
-                                        src="../資訊圖庫/合作夥伴logo/Cisco-logo.png" alt="" />
+                                <div class="col-xl-6  rec300">
+                                    <div class="center">
+                                        <img class="w-100 h-auto" src="../資訊圖庫/合作夥伴logo/Cisco-logo.png" alt="" />
+                                    </div>                                    
                                 </div>
-                                <div class="col-xl-6">
+                                <div class="col-xl-6 pl-4">
                                     <h2 class="indexh2">CISCO</h2>
                                     <p class="indexp">超融合基礎架構(HCI)：HyperFlex<br />防火牆<br />WEBEX視訊會議<br />CISCO網路設備</p>
                                 </div>
@@ -384,11 +410,12 @@
                     <div class="bg-light">
                         <a href="#">
                             <div class="row">
-                                <div class="col-xl-6 align-self-center rec300">
-                                    <img class="w-100 h-auto"
-                                        src="../資訊圖庫/合作夥伴logo/aruba.svg" alt="" />
+                                <div class="col-xl-6 rec300">
+                                    <div class="center">
+                                        <img class="w-100 h-auto" src="../資訊圖庫/合作夥伴logo/aruba.svg" alt="" />
+                                    </div>                                    
                                 </div>
-                                <div class="col-xl-6">
+                                <div class="col-xl-6 pl-4">
                                     <h2 class="indexh2">Aruba</h2>
                                     <p class="indexp">SWITCH<br />控制器<br />AP</p>
                                 </div>
@@ -402,11 +429,12 @@
                     <div class="bg-light">
                         <a href="#">
                             <div class="row">
-                                <div class="col-xl-6 align-self-center rec300">
-                                    <img class="w-100 h-auto"
-                                        src="../資訊圖庫/合作夥伴logo/NUTANIX.png" alt="" />
+                                <div class="col-xl-6 rec300">
+                                    <div class="center">
+                                        <img class="w-100 h-auto" src="../資訊圖庫/合作夥伴logo/NUTANIX.png" alt="" />
+                                    </div>                                    
                                 </div>
-                                <div class="col-xl-6">
+                                <div class="col-xl-6 pl-4">
                                     <h2 class="indexh2">NUTANIX</h2>
                                     <p class="indexp">超融合</p>
                                 </div>
@@ -420,9 +448,11 @@
                         <a href="#">
                             <div class="row">
                                 <div class="col-xl-6 align-self-center rec300">
-                                    <img class="w-100 h-auto" src="../資訊圖庫/合作夥伴logo/Fortinet-Logo.png" alt="補圖" />
+                                    <div class="center">
+                                        <img class="w-100 h-auto" src="../資訊圖庫/合作夥伴logo/Fortinet-Logo.png" alt="補圖" />
+                                    </div>                                    
                                 </div>
-                                <div class="col-xl-6">
+                                <div class="col-xl-6 pl-4">
                                     <h2 class="indexh2">FORTIGATE</h2>
                                     <p class="indexp">防火牆<br />SWITCH<br />AP</p>
                                 </div>
@@ -436,10 +466,12 @@
                     <div class="bg-light">
                         <a href="#">
                             <div class="row">
-                                <div class="col-xl-6 align-self-center rec300">
-                                    <img class="w-100 h-auto" src="../資訊圖庫/合作夥伴logo/DVC.svg" alt="補圖" />
+                                <div class="col-xl-6 rec300">
+                                    <div class="center">
+                                        <img class="w-100 h-auto" src="../資訊圖庫/合作夥伴logo/DVC.svg" alt="補圖" />
+                                    </div>                                    
                                 </div>
-                                <div class="col-xl-6">
+                                <div class="col-xl-6 pl-4">
                                     <h2 class="indexh2">DVC</h2>
                                     <p class="indexp">文件加密保險系統</p>
                                 </div>
@@ -474,7 +506,7 @@
     </div>
 
     <script>
-        
+
     </script>
 </body>
 
