--- a/html/news.html
+++ b/html/news.html
@@ -273,9 +273,9 @@
                     <div class="bg-light">
                         <a href="#">
                             <div class="row">
-                                <div class="col-xl-6 rec300">
-                                    <div class="center">
-                                        <img class="w-100 h-auto" src="../資訊圖庫/合作夥伴logo/LENOVO-1.jpg" alt="補圖" />
+                                <div class="col-xl-6 rec300 border">
+                                    <div class="align-items-center">
+                                        <img class="w-75 h-auto" src="../資訊圖庫/合作夥伴logo/LENOVO-1.jpg" alt="補圖"/>
                                     </div>
                                 </div>
                                 <div class="col-xl-6 pl-4">
@@ -290,9 +290,9 @@
                     <div class="bg-light">
                         <a href="#">
                             <div class="row">
-                                <div class="col-xl-6 rec300">
+                                <div class="col-xl-6 rec300 border">
                                     <div class="center">
-                                        <img class="w-100 h-auto" src="../資訊圖庫/合作夥伴logo/MICROSOFT-1.png" alt="補圖" />
+                                        <img class="w-75 h-auto" src="../資訊圖庫/合作夥伴logo/MICROSOFT-1.png" alt="補圖" />
                                     </div>
 
                                 </div>
