--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -37,6 +37,11 @@
         </div>
     </div>
 
+    <!-- Banner -->
+    <div class = "aboutBanner">
+        <img src = "../img/logo/verticle01.png">
+    </div>
+
     <!-- 關於凱茂 -->
     <div class="container vh-100 mt-5">
         <div class="row mt-5">
@@ -299,7 +304,7 @@
 
 
     <!-- 里程碑 -->
-    <div>
+    <div class = "milestone">
         <h2 class="indexh2 text-center">里程碑</h2>
 
         <div class="timeline mt-5">
