--- a/html/index.html
+++ b/html/index.html
@@ -50,8 +50,7 @@
                 <div class="wapperContentWord">
                     <a href="#">HOME</a><br>
                     <a href="#">ABOUT</a><br>
-                    <a href="#">SERVICES</a><br>
-                    <a href="#">PRODUCTS</a><br>
+                    <a href="#">NEWS</a><br>
                     <a href="#">CONTACT</a>
                 </div>
 
@@ -83,7 +82,7 @@
         </div>
 
         <!-- 服務項目 -->
-        <div class="container-fluid" style="background-color: #ffffff; background-size: cover; padding-bottom: 80px;">
+        <div class="container-fluid indexService">
         <div class="container" style="margin-top:1200px">
             <div class="row">
                 <div class="col-lg-6">
@@ -137,7 +136,7 @@
         </div>
 
         <!-- 最新消息 -->
-        <div class="container-fluid" style="background-color: #f3f3f3; padding-bottom:100px;" >
+        <div class="container-fluid indexNews" >
             <div class="container">
                 <div class="row">
                     <div class="col-lg-7 d-flex" style="background-color:#f3f3f3; height:400px; margin-top: 100px">
@@ -218,6 +217,7 @@
             </div>
         </div>
 
+        <!-- aboutus -->
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-6 d-flex align-items-center justify-content-center"style="background-color: #ffffff; ">
